# rpg-raid-shop

./: .env.dev.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/client_bevy/: Cargo.toml
crates/client_bevy/src/: camera.rs  main.rs  network.rs  player.rs  world.rs
crates/client_bevy/src/core/: camera.rs  mod.rs  network.rs  world.rs
crates/client_bevy/src/features/: mod.rs
crates/client_bevy/src/features/player/: components.rs  mod.rs  systems.rs
crates/client_bevy/src/module_bindings/: connect_guest_reducer.rs  mod.rs  move_self_reducer.rs  player_table.rs  player_type.rs  players_snapshot_table.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/spacetimedb_module/: Cargo.toml
crates/spacetimedb_module/src/: lib.rs  lifecycle.rs
crates/spacetimedb_module/src/player/: mod.rs  reducers.rs  tables.rs  views.rs
crates/xtask/src/: main.rs
docs/: architecture.md  runbook.md
scripts/dev/: db-generate.sh  db-publish.sh  db-start.sh  db-sync.sh  db.sh  lib.sh  run-a.sh  run-b.sh  run-client.sh
