[workspace]
members = [
  "crates/client_bevy",
  "crates/shared",
  "crates/spacetimedb_module",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
bevy = "0.18"
bevy_ecs_ldtk = "0.14"
serde = { version = "1", features = ["derive"] }
spacetimedb = "2.0.2"
